<resources>

    <string name="app_name">Provision Store</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">Provision Store</string>
    <string name="network">3G/4G NetSpeed  Optimizer Free</string>
    <string name="network_pro">3G/4G NetSpeed Optimizer Pro</string>
    <string name="optimizer">Provision \nOptimizer Free</string>
    <string name="optimizer_pro">Provision \nOptimizer Pro</string>
    <string name="rootstudio">Provision \nRoot Studio Pro</string>
    <string name="appinfo">Application Information</string>
    <string name="loading">Please wait..</string>
    <string name="prepare">Under Construction :)</string>

</resources>